--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="/static/css/chartjs.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.js"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
@@ -13,7 +17,11 @@
 <body>
     <div id="root">
     </div>
-    <script src="/static/js/coins.jsx" type="text/jsx"></script>
+    <script src="/static/js/userInvestmentForm.jsx" type="text/jsx"></script>
+    <script src="/static/js/coinSearchForm.jsx" type="text/jsx"></script>
+    <script src="/static/js/chart.jsx" type="text/jsx"></script>
+    <script src="/static/js/mainPage.jsx" type="text/jsx"></script>
+    <script src="/static/js/profile.jsx" type="text/jsx"></script>
     <script src="/static/js/signupForm.jsx" type="text/jsx"></script>
     <script src="/static/js/login.jsx" type="text/jsx"></script>
     <script src="/static/js/app.jsx" type="text/jsx"></script>
