complete user favorite coins

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
     <div id="root">
     </div>
     <script src="/static/js/userInvestmentForm.jsx" type="text/jsx"></script>
+    <script src="/static/js/favoriteCoin.jsx" type="text/jsx"></script>
     <script src="/static/js/coinSearchForm.jsx" type="text/jsx"></script>
     <script src="/static/js/chart.jsx" type="text/jsx"></script>
     <script src="/static/js/mainPage.jsx" type="text/jsx"></script>
