--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,9 @@
 <body>
     <div id="root">
     </div>
+    <script src="/static/js/coinbaseConnect.jsx" type="text/jsx"></script>
+    <script src="/static/js/coinNews.jsx" type="text/jsx"></script>
+    <script src="/static/js/topVolCoinList.jsx" type="text/jsx"></script>
     <script src="/static/js/autoCoinSearch.jsx" type="text/jsx"></script>
     <script src="/static/js/userInvestmentForm.jsx" type="text/jsx"></script>
     <script src="/static/js/addFavoriteCoin.jsx" type="text/jsx"></script>
