finished user favorite

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,12 +19,13 @@
 <body>
     <div id="root">
     </div>
-    <script src="/static/js/coinNews.jsx" type="text/jsx"></script>
-    <script src="/static/js/topVolCoinList.jsx" type="text/jsx"></script>
-    <script src="/static/js/autoCoinSearch.jsx" type="text/jsx"></script>
+    <script src="/static/js/Header.jsx" type="text/jsx"></script>
+    <script src="/static/js/news.jsx" type="text/jsx"></script>
     <script src="/static/js/userInvestmentForm.jsx" type="text/jsx"></script>
     <script src="/static/js/addFavoriteCoin.jsx" type="text/jsx"></script>
     <script src="/static/js/chart.jsx" type="text/jsx"></script>
+    <script src="/static/js/autoCoinSearch.jsx" type="text/jsx"></script>
+    <script src="/static/js/coinPrice.jsx" type="text/jsx"></script>
     <script src="/static/js/mainPage.jsx" type="text/jsx"></script>
     <script src="/static/js/profile.jsx" type="text/jsx"></script>
     <script src="/static/js/signupForm.jsx" type="text/jsx"></script>
