--- a/templates/index.html
+++ b/templates/index.html
@@ -12,21 +12,24 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16.9.0/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/react-router-dom@5.2.0/umd/react-router-dom.js"></script>
     <!-- <script src="https://unpkg.com/react-autocomplete@1.8.1/dist/react-autocomplete.js"></script> -->
 </head>
 <body>
     <div id="root">
     </div>
-    <script src="/static/js/coinNews.jsx" type="text/jsx"></script>
-    <script src="/static/js/topVolCoinList.jsx" type="text/jsx"></script>
-    <script src="/static/js/autoCoinSearch.jsx" type="text/jsx"></script>
+    <script src="/static/js/coinExchange.jsx" type="text/jsx"></script>
+    <script src="/static/js/coinInfo_render.jsx" type="text/jsx"></script>
+    <script src="/static/js/Header.jsx" type="text/jsx"></script>
+    <script src="/static/js/news.jsx" type="text/jsx"></script>
     <script src="/static/js/userInvestmentForm.jsx" type="text/jsx"></script>
-    <script src="/static/js/addFavoriteCoin.jsx" type="text/jsx"></script>
+    <script src="/static/js/UserFavoriteCoin.jsx" type="text/jsx"></script>
     <script src="/static/js/chart.jsx" type="text/jsx"></script>
+    <script src="/static/js/coinSearchForm.jsx" type="text/jsx"></script>
+    <script src="/static/js/coinPrice.jsx" type="text/jsx"></script>
     <script src="/static/js/mainPage.jsx" type="text/jsx"></script>
-    <script src="/static/js/profile.jsx" type="text/jsx"></script>
+    <script src="/static/js/transaction.jsx" type="text/jsx"></script>
     <script src="/static/js/signupForm.jsx" type="text/jsx"></script>
     <script src="/static/js/login.jsx" type="text/jsx"></script>
     <script src="/static/js/blockUser.jsx" type="text/jsx"></script>
