--- a/static/css/table.css
+++ b/static/css/table.css
@@ -8,6 +8,11 @@
   color: #5948d5;
 }
 
+.fav-table {
+  background-color: #f8ecc0;
+  color: #5948d5;
+}
+
 .trans-table-size {
   line-height: 50px;
   min-height: 50px;
