--- a/static/css/coinInfo_render.css
+++ b/static/css/coinInfo_render.css
@@ -1,15 +1,24 @@
 .chartLine {
   width: 1200px; 
+  margin-right: 0;
 }
 
 .graph-btn {
-background-color: #fbcc20;
+background-color: #5948d5;
+color:white;
 margin: 6px;
+}
+
+.graph-btn:hover {
+  color: #fff !important;
+  text-decoration: none;
 }
 
 .fav-btn {
 background-color: #fbcc20;
 margin:12px;
+margin-top: 1.5rem;
+margin-bottom: 2rem;
 }
 
 .card-img-right {
@@ -62,5 +71,24 @@ margin:12px;
     font-size: 3.5rem;
   }
 }
+
+.coin-img {
+  width: auto;
+  height: 100%;
+  margin-right: 1rem;
+}
+
+.display-flex {
+  display: flex;
+}
+
+.inline {
+  display: inline-block;
+}
+
+.small-margin {
+  margin-right: 1rem;
+}
+
 
 
